[package]
name = "furl-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
aes = "0.8"
ctr = "0.9"
chacha20 = "0.9"
js-sys = "0.3"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
